--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_562
+spring.datasource.url=jdbc:mysql://10.48.145.128:3306/todo_562
 spring.datasource.username=api_562
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
